--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
  html {
-      background-image: linear-gradient(#018DED, lightblue);
+      background-image: linear-gradient(#101316, lightblue);
       background-size:cover;
       font-family:'helvetica neue';
       text-align: center;
